# airbnb-clone-backend

./: .coveragerc  pyproject.toml  test.json
bookings/: serializers.py
bookings/migrations/: 0001_initial.py  0002_alter_booking_experience_alter_booking_room_and_more.py
categories/: serializers.py  views.py
categories/migrations/: 0001_initial.py
config/: settings.py  urls.py
direct_messages/: models.py
direct_messages/migrations/: 0001_initial.py  0002_alter_chattingroom_users_alter_message_room_and_more.py
experiences/: views.py
experiences/migrations/: 0001_initial.py  0002_experience_category.py  0003_alter_experience_category_alter_experience_host_and_more.py
houses/: admin.py  models.py
houses/migrations/: 0001_initial.py
medias/migrations/: 0001_initial.py  0002_alter_photo_experience_alter_photo_room_and_more.py  0003_alter_photo_file_alter_video_file.py
reviews/migrations/: 0001_initial.py  0002_alter_review_experience_alter_review_room_and_more.py
rooms/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
rooms/migrations/: 0001_initial.py  0002_alter_amenity_description.py  0003_room_name.py  0004_alter_amenity_options.py  0005_room_category.py  0006_alter_room_amenities_alter_room_category_and_more.py
rooms/templates/: all_room.html  room_detail.html
users/: admin.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_avatar.py
wishlists/migrations/: 0001_initial.py  0002_alter_wishlist_experiences_alter_wishlist_rooms_and_more.py
